testsuite/tests/builtins/pattern/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ pattern()
   │ ────┬────  
   │     ╰────── Missing value for the "regex" parameter
───╯
